# Handwritten-neural-network

./: CMakeLists.txt  README.md  neuralnet.cpp  neuralnet.h  spamtest.csv  train.txt  tt  utils.cpp  utils.h
data_set/: spambase.csv  train.csv
src/: main.cpp  tt.cpp
